Updaetes commentInfo interface
