# book-friends-server/routes/comment.js
@@ -3,7 +3,8 @@ const router = express.Router()
 const commentController = require('../controllers/commentController')
 
 const routers = router
+  .post('/like', commentController.likeComment)
   .post('/publish', commentController.addCommentOfDynamic)
-  .post('/infos', commentController.queryCommentsByDynamicId)
+  .get('/infos', commentController.queryCommentsByDynamicId)
 
 module.exports = routers
